--- a/.gitignore
+++ b/.gitignore
@@ -8,8 +8,7 @@ _obj
 _test
 
 # Architecture specific extensions/prefixes
-*.[568vq]
-[568vq].out
+*.out
 
 *.cgo1.go
 *.cgo2.c
@@ -25,3 +24,6 @@ _testmain.go
 
 # Coverage results (HTML)
 *_cov.html
+
+# macOS
+.DS_Store
