--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - wget -qO- https://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
   - sudo apt-get update -qq
   - sudo apt-get install -qq rethinkdb
-  - rethinkdb
+  - rethinkdb &
 
 install:
   - go get -u github.com/boatilus/peppercorn
