--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,19 @@ language: go
 go:
   - 1.7.x
 
+notifications:
+  email:
+    on_success: never
+    on_failure: never
+
 before_install:
   - source /etc/lsb-release && echo "deb http://download.rethinkdb.com/apt $DISTRIB_CODENAME main" | sudo tee /etc/apt/sources.list.d/rethinkdb.list
   - wget -qO- https://download.rethinkdb.com/apt/pubkey.gpg | sudo apt-key add -
   - sudo apt-get update -qq
   - sudo apt-get install -qq rethinkdb
-  - rethinkdb &
 
 install:
   - go get -u github.com/boatilus/peppercorn
+
+before_script:
+  - rethinkdb --daemon
